Add torrent deletion endpoint and actions

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -516,6 +516,7 @@
                       <th>Ajouté</th>
                       <th>Disponible le</th>
                       <th>Identifiant</th>
+                      <th>Actions</th>
                     </tr>
                   </thead>
                   <tbody id="pending-download-rows"></tbody>
