Align pending torrent headers

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -487,7 +487,16 @@
 
             <div class="download-list-table">
               <div class="table-wrapper">
-                <table>
+                <table class="pending-torrents-table">
+                  <colgroup>
+                    <col style="width: 28%;">
+                    <col style="width: 12%;">
+                    <col style="width: 12%;">
+                    <col style="width: 12%;">
+                    <col style="width: 12%;">
+                    <col style="width: 12%;">
+                    <col style="width: 12%;">
+                  </colgroup>
                   <thead>
                     <tr>
                       <th>Nom</th>
@@ -507,7 +516,16 @@
 
             <div class="download-list-table">
               <div class="table-wrapper">
-                <table>
+                <table class="pending-torrents-table">
+                  <colgroup>
+                    <col style="width: 28%;">
+                    <col style="width: 12%;">
+                    <col style="width: 12%;">
+                    <col style="width: 12%;">
+                    <col style="width: 12%;">
+                    <col style="width: 12%;">
+                    <col style="width: 12%;">
+                  </colgroup>
                   <thead>
                     <tr>
                       <th>Nom</th>
