Remove tracker YAML editor

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -463,8 +463,7 @@
               </div>
             </div>
             <div id="trackers-form" class="config-form hidden"></div>
-            <textarea id="trackers-editor" spellcheck="false" placeholder="Configuration YAML du tracker"></textarea>
-            <p class="hint" id="trackers-hint">Sélectionnez un tracker pour l'éditer.</p>
+            <p class="hint" id="trackers-hint">Sélectionnez un tracker pour le configurer.</p>
           </section>
         </section>
 
