Add IMDb search button to calendar

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -297,6 +297,10 @@
               </div>
             </div>
 
+            <div class="calendar-imdb-actions">
+              <button id="calendar-imdb-search" type="button" hidden>Rechercher sur IMDb</button>
+            </div>
+
             <div id="calendar-content" class="calendar-content">
               <p class="hint">Aucun contenu calendrier pour le moment.</p>
             </div>
