--- a/app/web/index.html
+++ b/app/web/index.html
@@ -343,7 +343,7 @@
               <h2>Collection</h2>
               <div class="panel-tools">
                 <form id="collection-search-form" class="collection-search" role="search" autocomplete="off">
-                  <label for="collection-search">Rechercher un film</label>
+                  <label for="collection-search">Rechercher un titre</label>
                   <input id="collection-search" name="search" type="search" placeholder="Titre" />
                   <button type="submit">Chercher</button>
                 </form>
