Add restart with update control

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -118,6 +118,7 @@
               <div class="actions">
                 <button id="stop-daemon" type="button" class="danger">Arrêter</button>
                 <button id="restart-daemon" type="button" class="danger">Redémarrer</button>
+                <button id="restart-daemon-update" type="button" class="danger">Redémarrer + mise à jour</button>
                 <button id="refresh-status" type="button">Actualiser</button>
               </div>
             </div>
