Normalize show collection types

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -339,7 +339,7 @@
                 <select id="collection-type" name="type">
                   <option value="">Type</option>
                   <option value="movie">Films</option>
-                  <option value="tv">Shows</option>
+                  <option value="show">Séries</option>
                   <option value="all">Tous</option>
                 </select>
                 <div class="actions">
