Add collapsible error log entries

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -575,7 +575,7 @@
             <button type="button" class="copy-log">Copier</button>
           </div>
         </header>
-        <pre class="log-content"></pre>
+        <div class="log-content"></div>
       </article>
     </template>
 
