Add unmatched collection filter

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -340,6 +340,7 @@
                   <option value="">Type</option>
                   <option value="movie">Films</option>
                   <option value="show">Séries</option>
+                  <option value="unmatched">Unmatched</option>
                   <option value="all">Tous</option>
                 </select>
                 <div class="actions">
