Add scheduler template command panel

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -185,6 +185,15 @@
               <p class="hint">Aucune commande CLI détectée.</p>
             </div>
           </section>
+
+          <section class="panel" id="template-commands-panel">
+            <div class="panel-header">
+              <h2>Templates de commandes</h2>
+            </div>
+            <div id="template-command-list" class="scheduler-tasks">
+              <p class="hint">Aucun template de commande détecté.</p>
+            </div>
+          </section>
         </section>
 
         <section
