Add watchlist import progress view

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -574,6 +574,19 @@
               <p class="hint" id="watchlist-empty">Aucun média dans cette liste.</p>
             </div>
           </section>
+          <section class="panel hidden" id="watchlist-import-panel">
+            <div class="panel-header">
+              <h2>Import en cours</h2>
+            </div>
+            <div class="import-status">
+              <p>Statut: <span id="watchlist-import-status">En cours</span></p>
+              <p>Ajoutés / total: <span id="watchlist-import-count">0 / 0</span></p>
+              <p>Dernier titre traité: <span id="watchlist-import-title">—</span></p>
+              <p class="hint hidden" id="watchlist-import-error"></p>
+            </div>
+            <p class="hint hidden" id="watchlist-import-final"></p>
+            <button id="watchlist-import-back" type="button" class="primary hidden">Retour à la liste d’intérêt</button>
+          </section>
         </section>
       </div>
     </main>
