Show watchlist import results

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -585,6 +585,7 @@
               <p class="hint hidden" id="watchlist-import-error"></p>
             </div>
             <p class="hint hidden" id="watchlist-import-final"></p>
+            <div id="watchlist-import-final-list" class="hidden"></div>
             <button id="watchlist-import-back" type="button" class="primary hidden">Retour à la liste d’intérêt</button>
           </section>
         </section>
