Add cache-busted app.js versioning

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -615,6 +615,6 @@
     <script src="path_utils.js" defer></script>
     <script src="calendar_window.js" defer></script>
     <script src="tracker_links.js" defer></script>
-    <script src="app.js" defer></script>
+    <script src="app.js?v=__APP_VERSION__" defer></script>
   </body>
 </html>
