Make watchlist import debug optional

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -543,6 +543,7 @@
                 <div class="actions">
                   <input id="watchlist-import-file" type="file" accept=".csv,text/csv" />
                   <button id="watchlist-import-button" type="button">Importer CSV</button>
+                  <label><input id="watchlist-import-debug" type="checkbox" /> Debug</label>
                   <button id="refresh-watchlist" type="button">Rafraîchir</button>
                 </div>
               </div>
