Track skipped watchlist import entries

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -552,6 +552,7 @@
             <div id="watchlist-import-result" class="hidden">
               <p class="hint" id="watchlist-import-summary"></p>
               <div id="watchlist-import-list"></div>
+              <div id="watchlist-import-skipped"></div>
             </div>
 
             <div class="download-list-table">
@@ -587,6 +588,7 @@
             </div>
             <p class="hint hidden" id="watchlist-import-final"></p>
             <div id="watchlist-import-final-list" class="hidden"></div>
+            <div id="watchlist-import-final-skipped" class="hidden"></div>
             <button id="watchlist-import-back" type="button" class="primary hidden">Retour à la liste d’intérêt</button>
           </section>
         </section>
